# qaf

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: release-manager-agent.md
crates/qaf-core/: Cargo.toml
crates/qaf-core/src/: error.rs  lib.rs  linguistic.rs  models.rs  types.rs
crates/quran-api/: Cargo.toml
crates/quran-api/src/: errors.rs  handlers.rs  lib.rs  main.rs  routes.rs
crates/quran-api/tests/: integration.rs
crates/quran-db/: Cargo.toml
crates/quran-db/src/: db.rs  lib.rs  models.rs  queries.rs  text.rs
crates/quran-import/: Cargo.toml
crates/quran-import/src/: importer.rs  main.rs  qac.rs  transliterate.rs
crates/quran-mcp/: Cargo.toml
crates/quran-mcp/src/: main.rs  schema.rs  server.rs
crates/quran-tafsir-import/: Cargo.toml
crates/quran-tafsir-import/src/: client.rs  importer.rs  main.rs
data/audio/khalaf/: ingest.py  seed_001.sql
data/import/: README.md
data/seed/: sample_words.json
docs/: architecture.md
migrations/: 0001_initial.sql  0002_add_bare_columns.sql  0003_tadabbur.sql  0004_translations.sql  0005_hadith_cross_refs.sql  0006_irab.sql  0007_structure.sql  0008_word_tokens.sql  0009_khalaf.sql  0010_audio.sql
prompts/: audit-cicd.md  audit-project.md  audit-security.md
