[package]
name = "quran-import"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quran-import"
path = "src/main.rs"

[dependencies]
quran-db = { path = "../quran-db" }
tokio = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
